# supabase_testcontainers

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: generate-commit-message.yml  generate-pr-description.yml  rust.yml
docs/: ANALYTICS_IMPLEMENTATION.md  AUTH_IMPLEMENTATION_PLAN.md  FUNCTIONS_IMPLEMENTATION.md  GRAPHQL_IMPLEMENTATION.md  POSTGREST_IMPLEMENTATION.md  REALTIME_IMPLEMENTATION.md  STORAGE_IMPLEMENTATION.md  TESTING_PLAN.md
src/: analytics.rs  auth.rs  consts.rs  error.rs  functions.rs  graphql.rs  lib.rs  postgrest.rs  realtime.rs  storage.rs
tests/: analytics_integration.rs  auth_integration.rs  basic_tests.rs  functions_integration.rs  graphql_integration.rs  postgrest_integration.rs  realtime_integration.rs  storage_integration.rs
tests/fixtures/functions/: index.ts
tests/fixtures/functions/hello/: index.ts
